# LazGUI

./: AlgDialog.cpp  AlgDialog.h  AlgSolver.cpp  AlgSolver.h  CMakeLists.txt  ExperimentDialog.cpp  ExperimentDialog.h  ExperimentDialog.ui  GUITypes.cpp  GUITypes.h  GenPathDialog.cpp  GenPathDialog.h  GenPathDialog.ui  ParallelTest.cpp  ParallelTest.h  bindDlg.cpp  bindDlg.h  bindDlg.ui  cvqtconverter.cpp  cvqtconverter.h  duppathdlg.h  duppathdlg.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newPathDlg.cpp  newPathDlg.h  newPathDlg.ui
GuiScript/: 肝脏去噪去背景.lazScript
cmake/: FindMKL.cmake  FindMLPACK.cmake  FindSnappy.cmake
